<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/constraint_default_margin_8dp"
            android:layout_marginTop="@dimen/constraint_default_margin_8dp"
            android:layout_marginEnd="@dimen/constraint_default_margin_8dp"
            android:text="@string/app_name"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/constraint_default_margin_8dp"
            android:layout_marginTop="@dimen/constraint_default_margin_8dp"
            android:layout_marginEnd="@dimen/constraint_default_margin_8dp"
            android:text="@string/device_not_configured_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />


        <ptml.releasing.app.views.MaterialRippleLayout
            android:id="@+id/btn_profiles_layout"
            android:layout_width="wrap_content"
            style="@style/RippleLayoutStyle.Configure"
            android:layout_marginStart="@dimen/constraint_default_margin_16dp"
            android:layout_marginTop="@dimen/constraint_default_margin_8dp"
            android:layout_marginEnd="@dimen/constraint_default_margin_16dp"
            android:layout_marginBottom="@dimen/constraint_default_margin_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_message"
            app:layout_constraintBottom_toBottomOf="parent">

            <ptml.releasing.app.views.SupportVectorDrawablesButton
                android:id="@+id/btn_profiles"
                style="@style/ButtonStyle.Save"
                android:text="@string/dismiss" />
        </ptml.releasing.app.views.MaterialRippleLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
